@@ -1,3 +1,8 @@
+2006-09-13  Ruben Vermeersch  <ruben@savanne.be>
+
+	* plugins/MiniMode/MiniModeWindow.cs: Get the default cover from
+	Banshee.Base.Branding.
+
 2006-09-08  Mike Urbanski <michael.c.urbanski@gmail.com> 
 	
 	* plugins/Podcast/DownloadCore/DownloadCore.cs:
